--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,12 +1,24 @@
-<h1>My Tasks</h1>
+<div class="container"><h1>My Tasks</h1>
 
 <ul>
   <% @tasks.each do |task| %>
   <li>
-    <%= link_to task.title, task_path(task.id) %>
-    <%= link_to "Delete this task", task_path(task), method: :delete, data: {confirm: "Are you sure?"} %>
+    <div class="card" style="width:18rem">
+      <div class="card-body">
+        <div class="card-title">
+          <%= link_to task.title, task_path(task.id) %>
+        </div>
+        <div class="card-text">
+          <%= link_to "Delete this task", task_path(task), method: :delete, data: {confirm: "Are you sure?", class: "modal"}, class: "alert alert-primary" %>
+        </div>
+      </div>
+    </div>
   </li>
   <% end %>
 </ul>
 
+<br>
+
 <%= link_to "Create a new task", tasks_new_path %>
+</div>
+
