--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,10 +1,5 @@
-<h1>New task</h1>
 
-
-<%= form_for(@task) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :details %>
-  <%= f.text_area :details %>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <h1>New task</h1>
+  <%= render "form", task: @task%>
+</div>
