--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,26 +2,22 @@
 
 <ul>
   <% @tasks.each do |task| %>
-  <li>
-    <div class="card" style="width:18rem">
-      <div class="card-body">
-        <div class="card-title">
-          <%= link_to task.title, task_path(task.id) %>
-        </div>
-        <div class="card-text">
-          <%= link_to task_path(task), method: :delete, data: {confirm: "Are you sure?", class: "modal"} do %>
+  <li class="task">
+      <%= sanitize @icon = task.completed ? '<i class="far fa-check-square"></i>' : '<i class="far fa-square"></i>' %>
+      <%= link_to task.title, task_path(task.id) %>
+      <%= link_to task_path(task), method: :delete, data: {confirm: "Are you sure?", class: "modal"} do %>
             <i class="fas fa-trash-alt"></i>
-          <% end %>
-        <%= sanitize @icon = task.completed ? '<i class="far fa-check-square"></i>' : '<i class="far fa-square"></i>' %>
-        </div>
-      </div>
-    </div>
+      <% end %>
+
   </li>
   <% end %>
 </ul>
 
-<br>
+<hr>
 
-<%= link_to "Create a new task", tasks_new_path %>
+<%= link_to tasks_new_path do %>
+  <i class="fas fa-plus inline"></i>
+  <p class="inline">Add new task</p>
+<% end %>
 </div>
 
