--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,4 +2,7 @@
 <div class="container">
   <h1>New task</h1>
   <%= render "form", task: @task%>
+
+  <hr>
+  <%= link_to "See all tasks", root_path%>
 </div>
